<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.NivelServicioActivity">

    <LinearLayout
        android:id="@+id/lineLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/motivoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/tituloServicio"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motivoTxt"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/razon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="clicAction"
                android:text="@string/razon1" />

            <RadioButton
                android:id="@+id/razon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clicAction"
                android:text="@string/razon2" />

            <RadioButton
                android:id="@+id/razon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clicAction"
                android:text="@string/razon3" />

            <RadioButton
                android:id="@+id/razon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clicAction"
                android:text="@string/razon4" />
        </RadioGroup>


        <TextView
            android:id="@+id/servicioTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/tituloNivelServicio"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servicioTxt"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/nivel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="clicAction"
                android:text="@string/nv1" />

            <RadioButton
                android:id="@+id/nivel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clicAction"
                android:text="@string/nv2" />

            <RadioButton
                android:id="@+id/nivel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clicAction"
                android:text="@string/nv3" />

            <RadioButton
                android:id="@+id/nivel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clicAction"
                android:text="@string/nv4" />
        </RadioGroup>

        <Button
            android:id="@+id/enviarNiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="clicAction"
            android:text="@string/enviar"
            android:theme="@style/MiBotonRaised"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>