<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.CambiarPassActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/cambiarClave"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtClvActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/clvActual"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtClv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/clv1"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtClv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/clv2"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnCambiarClv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="cambiarPass"
                android:text="@string/cambiarClv"
                android:theme="@style/MiBotonRaised" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>